<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="185dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:id="@+id/card"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mahavir_hotel"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/name"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_ramaji_film_city"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:id="@+id/location"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:text="@string/_14_aug"
                android:textSize="12sp"
                android:id="@+id/date"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="275dp"
            android:layout_marginTop="133dp"
            android:src="@drawable/ic_baseline_location_on_24"
            />


    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/card"
        android:layout_alignParentBottom="true"
        android:background="#bdbdbd"
        android:layout_marginTop="1dp"
        />
</RelativeLayout>