<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogInFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



    <ImageView
        android:layout_width="245dp"
        android:layout_height="175dp"
        android:id="@+id/restImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/_07png"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:fontFamily="@font/spartaneemibold600"
        android:textSize="25sp"
        android:id="@+id/login_title"
        android:layout_below="@id/restImage"
        android:layout_alignStart="@id/email_card"
        android:layout_marginTop="25dp"
        android:textColor="#1B2C4C"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:id="@+id/email_card"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/email_img"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_baseline_alternate_email_24"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/email"
                android:gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:background="@null"
                android:textSize="14sp"
                android:hint="@string/email_id"
                android:fontFamily="@font/spartanmedium500"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_card"
        android:id="@+id/pass_card"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/pass_img"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_baseline_lock_24"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/pass"
                android:gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:background="@null"
                android:textSize="14sp"
                android:hint="@string/password"
                android:fontFamily="@font/spartanmedium500"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:layout_width="235dp"
        android:layout_height="67dp"
        android:id="@+id/logInButton"
        android:layout_below="@id/pass_card"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        app:cornerRadius="4dp"
        android:text="@string/login"
        app:backgroundTint="#0165FF"
        android:fontFamily="@font/spartanbold700"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Restaurant?"
            android:fontFamily="@font/spartanreg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/register"
            android:layout_marginStart="12dp"
            android:textColor="#0165FF"
            android:fontFamily="@font/spartanmedium500"/>

    </LinearLayout>



    </RelativeLayout>

    </FrameLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        />

</RelativeLayout>